<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondo_app"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="6dp"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/logo_sonripluss"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_up"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/AzuL_logo"
            android:textSize="60sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            android:hint="@string/name_edittext"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/Lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            android:hint="@string/last_name_edittext"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/C.C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            android:hint="@string/CC_edittext"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/Phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            android:hint="@string/phone_number"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/EmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textColorHint="@color/gray"
            android:hint="@string/user_edittext"
            android:background="@drawable/rounded_edittext"
            />
        <EditText
            android:id="@+id/Password"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textColorHint="@color/gray"
            android:hint="@string/password_edittext"
            android:background="@drawable/rounded_edittext"
            />
        <EditText
            android:id="@+id/Confirm_Password"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textColorHint="@color/gray"
            android:hint="@string/comfirm_password_edittext"
            android:background="@drawable/rounded_edittext"
            />
        <Button
            android:id="@+id/Sign_Up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:paddingRight="139dp"
            android:paddingLeft="139dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="@drawable/rounded_buttom"
            android:backgroundTint="@color/Azul"
            />

    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>